base/src/test/resources/failure/terck/non-term2.aya.txt
In file $FILE:3:4 ->

  1 | open data Nat | zero | suc Nat
  2 | 
  3 | def f Nat : Nat
          ^^

Error: The recursive definition `f` is not structurally recursive

In file $FILE:6:4 ->

  4 |   | n => g (suc n)
  5 | 
  6 | def g Nat : Nat
          ^^

Error: The recursive definition `g` is not structurally recursive

2 error(s), 0 warning(s).
What are you doing?
